# slag

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  TODO.txt  notes.txt  todo.md
docs/slag/: ideas.md  service.md
docs/slag/postal/: reactor.md
examples/: CMakeLists.txt  codec.cpp  example.cpp  fuzz_intrusive_list.cpp  network_stack.cpp  poll.cpp  scratch.cpp  spsc_throughput.cpp  test_application.cpp  test_generated.cpp  test_generated.h
experimental/: buffer.h  post.h
include/slag/: address.h  application.h  awaitable.h  awaitable_base.h  bit_set.h  bit_set.hpp  buffer.h  buffer_reader.h  buffer_reader.hpp  buffer_slice.h  buffer_writer.h  buffer_writer.hpp  byte_stream.h  config.h  core.h  coroutine.h  coroutine.hpp  driver.h  error.h  event.h  event_loop.h  executor.h  fiber.h  fiber.hpp  fiber_base.h  file_descriptor.h  future.h  future.hpp  future2.h  future2.hpp  handle.h  intrusive_list.h  intrusive_list.hpp  intrusive_queue.h  intrusive_queue.hpp  io_uring_reactor.h  io_uring_resource_context.h  layer.h  layer.hpp  logging.h  (+54 more)
include/slag/collection/: bit_set.h  intrusive_queue.hpp  queue.hpp  spsc_queue.h
include/slag/core/: census.h  config.h  domain.h  event.h  executor.h  pollable.h  season.h  selector.h  service.h  service_interface.cpp  service_interface.h  service_registry.h  service_registry.hpp  task.h  task_role.h  types.h
include/slag/memory/: buffer_census.h  buffer_handle.h  buffer_ledger.h  buffer_types.h  memory_service.h  memory_service.hpp  memory_service_interface.h
include/slag/postal/: buffer.h  buffer_allocator.h  buffer_cursor.h  buffer_custodian.h  buffer_ledger.h  buffer_reader.h  buffer_slice.h  buffer_table.h  buffer_writer.h  census.h  cohort_buffer_allocator.h  config.h  default_buffer_allocator.h  domain.h  driver.h  driver.hpp  envelope.h  envelope.hpp  event.h  executor.h  file_handle.h  file_table.h  forum.h  forum.hpp  multishot_operation.h  operation.h  operation_allocator.h  operation_base.h  operation_factory.h  operation_handle.h  operation_handle.hpp  operation_types.h  parcel.h  pollable.h  pollable_queue.h  post_box.h  post_master.h  post_office.h  postal.h  postal_service.h  (+14 more)
include/slag/scheduling/: scheduler_service.h  scheduler_service_interface.h
include/slag/system/: file_handle.h  file_table.h  interrupt.h  multishot_operation.h  operation_allocator.h  operation_base.h  (+8 more)
libs/: CMakeLists.txt
proofs/: memory.tla
proofs/buffer.toolbox/: .project  buffer___Foo.launch
slag_unit_test/: CMakeLists.txt  ut_topology.cpp
src/: .CMakeLists.txt.swp  CMakeLists.txt  address.cpp  application.cpp  awaitable.cpp  awaitable_base.cpp  buffer.cpp  buffer_slice.cpp  byte_stream.cpp  driver.cpp  error.cpp  event.cpp  event_loop.cpp  executor.cpp  fiber.cpp  fiber_base.cpp  file_descriptor.cpp  io_uring_reactor.cpp  io_uring_resource_context.cpp  main.cpp  memory.cpp  message.cpp  message_buffer_fragment.cpp  message_encoder.cpp  message_fragment.cpp  message_record_fragment.cpp  operation.cpp  operation_flags.cpp  operation_state_machine.cpp  operation_types.cpp  platform.cpp  pollable.cpp  reactor.cpp  record_decoder.cpp  record_encoder.cpp  resource.cpp  resource_context.cpp  resource_context_index.cpp  selectable.cpp  socket.cpp  (+6 more)
src/core/: domain.cpp  event.cpp  executor.cpp  season.cpp  selector.cpp  service.cpp  service_interface.cpp  task.cpp
src/core/task/: buffered_writer_task.cpp
src/memory/: buffer_handle.cpp  buffer_ledger.cpp  memory_service.cpp
src/postal/: buffer.cpp  buffer_allocator.cpp  buffer_cursor.cpp  buffer_ledger.cpp  buffer_reader.cpp  buffer_slice.cpp  buffer_table.cpp  buffer_writer.cpp  cohort_buffer_allocator.cpp  domain.cpp  event.cpp  executor.cpp  file_handle.cpp  file_table.cpp  operation_base.cpp  post_box.cpp  post_office.cpp  postal_service.cpp  reactor.cpp  season.cpp  selector.cpp  task.cpp
src/postal/tasks/: buffered_writer_task.cpp
src/scheduling/: scheduler_service.cpp
src/slag/: CMakeLists.txt  application.cpp  application.h  bus.h  context.cpp  context.h  core.h  driver.h  event_loop.cpp  event_loop.h  managed.h  memory.h  resource.h  runtime.cpp  runtime.h  slag.h  system.h  thread.cpp  thread.h  thread_context.cpp  thread_context.h  topology.cpp  topology.h  types.h
src/slag/bus/: bus.cpp
src/slag/collections/: intrusive_list.h  queue.h  queue.hpp  spsc_queue.h  tagged_pointer.h  tagged_pointer.hpp
src/slag/core/: event.cpp  event.h  executor.cpp  executor.h  object.h  pollable.h  proto_task.h  resource.h  resource.hpp  resource_handle.h  resource_handle.hpp  resource_table.cpp  resource_table.h  resource_types.h  selector.cpp  selector.h  task.cpp  task.h
src/slag/driver/: region_driver.cpp  region_driver.h  router_driver.cpp  router_driver.h  shutdown_driver.cpp  shutdown_driver.h
src/slag/drivers/: region_driver.h  router_driver.h
src/slag/memory/: allocator.h  buffer.cpp  buffer.h
src/slag/system/: file_descriptor.h  interrupt.h  operation.h  operation_factory.h  operation_table.cpp  operation_table.h  operation_types.h  operation_user_data.h  operations.h  primitive_operation.h  reactor.cpp  reactor.h
src/slag/system/operations/: close_operation.h  interrupt_operation.h  nop_operation.h  poll_multishot_operation.h
src/system/: file_handle.cpp  file_table.cpp  reactor.cpp  system_service.cpp
tools/mgen/: Makefile  build.sh  lex.l  lex.yy.c  mgen  mgen.l  mgen.lex.c  mgen.tab.c  mgen.tab.h  mgen.y
tools/sgen/: Makefile  ast.h  ast.hpp  ast_context.h  ast_query.h  ast_query.hpp  ast_transform.cpp  ast_transform.h  code_generator.cpp  code_generator.h  foo.idl  main.cpp  parser.output  parser.y  string_util.cpp  string_util.h  test.idl  todo.txt  tokens.l  type.cpp
unit_test/: CMakeLists.txt  ut_bit_set.cpp  ut_byte_stream.cpp  ut_event.cpp  ut_executor.cpp  ut_future.cpp  ut_intrusive_list.cpp  ut_intrusive_queue.cpp  ut_io_uring_reactor.cpp  ut_lru16.cpp  ut_message.cpp  ut_operation_state_machine.cpp  ut_queue.cpp  ut_record.cpp  ut_registry.cpp  ut_result.cpp  ut_spsc_queue.cpp  ut_task_group.cpp  ut_task_queue.cpp  ut_transform.cpp
(+31 files in other folders)
